syntax = "proto3";

package com.vikram.grpc;

option java_multiple_files = true;

message Book {
  int32 book_id = 1;
  string title = 2;
  float price = 3;
  int32 pages = 4;
  int32 author_id = 5;
}

message Author {
  int32 author_id = 1;
  string first_name = 2;
  string last_name = 3;
  string gender = 4;
  int32 book_id = 5;
}

service BookAuthorService {
  // unary - sync call
  // client will send one request
  // and server will respond with one response
  rpc getAuthor(Author) returns (Author) {}

  // server streaming - async call
  // we can return List<Book> also
  // For async - Client will send one request
  // and server will respond with a stream of messages to the client

  rpc getBooksByAuthor(Author) returns (stream Book) {}

  // client streaming - async call
  // client sends multiple req , server returns single response
  // client sends a stream of books
  // server returns the most expensive book
  rpc getExpensiveBook(stream Book) returns (Book){}

  // bi directional streaming - async call
  // client will send multiple requests / messages
  // server will send stream of messages / multiple responses
  rpc getBookByAuthorGender(stream Book) returns (Book){}
}